--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@headlessui/react": "^1.7.18",
+		"@heroicons/react": "^2.1.1",
 		"geist": "^1.2.0",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"react-typist-component": "^1.0.5"
 	},
 	"devDependencies": {
 		"@types/react": "^18.2.43",
