--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"geist": "^1.2.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-router-dom": "^6.21.2",
 		"react-typist-component": "^1.0.5"
 	},
 	"devDependencies": {
